# FiniteVolume_1D

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/boundaryCondition/: CMakeLists.txt  abstractBoundaryCondition.hpp  dirichletBoundaryCondition.cpp  dirichletBoundaryCondition.hpp
src/boundarycondition/: CMakeLists.txt  abstractBoundarycondition.hpp  dirichletBoundarycondition.cpp  dirichletBoundarycondition.hpp
src/boundarycondition/dirichletBoundarycondition/: CMakeLists.txt  dirichletBoundarycondition.hpp
src/equation/: CMakeLists.txt  abstractEquation.hpp
src/equation/advectionEquation/: CMakeLists.txt  advectionEquation.cpp  advectionEquation.hpp
src/initialcondition/: CMakeLists.txt  initialcondition.cpp  initialcondition.hpp
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
src/output/: outputwriter.hpp
src/parameters/: parameters.hpp
src/riemann/: CMakeLists.txt  abstractRiemann.hpp  upwindRiemann.cpp  upwindRiemann.hpp
src/riemann/laxFriedrichsRiemann/: CMakeLists.txt  laxFriedrichsRiemann.hpp
src/riemann/upwindRiemann/: CMakeLists.txt  upwindRiemann.cpp  upwindRiemann.hpp
src/simulator/: CMakeLists.txt  simulationBuilder.cpp  simulationBuilder.hpp  simulator.cpp  simulator.hpp
src/surfaceintegral/: CMakeLists.txt  surfaceintegral.cpp  surfaceintegral.hpp
src/timediscretization/: CMakeLists.txt  abstractTimeDiscretization.cpp  abstractTimeDiscretization.hpp  eulerForwardTimeDiscretization.cpp  eulerForwardTimeDiscretization.hpp  timeDiscretizationInterface.hpp
src/timediscretization/eulerForwardTimeDiscretization/: CMakeLists.txt  eulerForwardTimeDiscretization.cpp  eulerForwardTimeDiscretization.hpp
test/: CMakeLists.txt
test/initialcondition/: CMakeLists.txt  initialcondition_unittest.cpp
test/mesh/: CMakeLists.txt  mesh_unittest.cpp
test/riemann/: CMakeLists.txt  upwindRiemann_unittest.cpp
test/surfaceintegral/: CMakeLists.txt  surfaceintegral_unittest.cpp
test/timediscretization/: CMakeLists.txt  eulerForwardTimeDiscretization_unittest.cpp
tools/: example.csv  plotSolution.py
